syntax = "proto3";

message API {
	oneof payloads {
		Request request = 1;
		Response response = 2;
		Error error = 3;
	}
}

enum MessageType {
	undefined = 0;
	version = 1;
	hash = 2;
	chunk = 3;
	size = 4;
	crc32 = 5;
}

message Response {
	MessageType type = 1;
	oneof response {
		string version = 2;
		string hash = 3;
		SizeResponse size = 4;
		ChunkResponse chunk = 5;
		CRC32Response crc32 = 6;
	}
}

message Request {
	MessageType type = 1;
	oneof requests {
		VersionRequest version = 2;
		HashRequest hash = 3;
		ChunkRequest chunk = 4;
		SizeRequest size = 5;
		ChunkRequest crc32 = 6;
	}
}

message SizeResponse {
	FileType file_type = 1;
	uint32 value = 2;
}

message ChunkResponse {
	FileType file_type = 1;
	uint32 start = 2;
	uint32 length = 3;
	bytes data = 4;
	optional uint32 crc32 = 5;
}

message CRC32Response {
	FileType file_type = 1;
	uint32 start = 2;
	uint32 length = 3;
	uint32 value = 4;
}

message VersionRequest {
	string model = 1;
	string hardware = 2;
}

message HashRequest {
	string model = 1;
	string hardware = 2;
	string version = 3;
}

message ChunkRequest {
	string hash = 1;
	FileType file_type = 2;
	uint32 start = 3;
	uint32 length = 4;
	optional bool include_crc32 = 5;
}

message SizeRequest {
	string hash = 1;
	FileType file_type = 2;
}

enum FileType {
	DAT = 0;
	BIN = 1;
}

enum Error {
	NONE = 0;
	GENERIC = 1;
	UNHANDLED_MESSAGE = 2;
}